--- a/WK1-6/CS2109S/ps2/ps2.ipynb
+++ b/WK1-6/CS2109S/ps2/ps2.ipynb
@@ -258,22 +258,36 @@
    "outputs": [],
    "source": [
     "def heuristic_func(problem: cube.Cube, state: cube.State) -> float:\n",
-    "    r\"\"\"\n",
-    "    Computes the heuristic value of a state\n",
-    "    \n",
+    "    \"\"\"\n",
+    "    Computes the admissible heuristic value of a state\n",
+    "\n",
     "    Args:\n",
     "        problem (cube.Cube): the problem to compute\n",
     "        state (cube.State): the state to be evaluated\n",
-    "        \n",
+    "\n",
     "    Returns:\n",
-    "        h_n (float): the heuristic value \n",
+    "        h_n (float): the heuristic value\n",
     "    \"\"\"\n",
     "    h_n = 0.0\n",
-    "    goals = problem.goal\n",
+    "    current_layout = state.layout\n",
+    "    goal_layout = problem.goal.layout\n",
+    "    rows, columns = problem.initial.shape\n",
     "\n",
-    "    \"\"\" YOUR CODE HERE \"\"\"\n",
-    "    \n",
-    "    \"\"\" END YOUR CODE HERE \"\"\"\n",
+    "    for color in ['R', 'G', 'B']:\n",
+    "        color_positions_current = [(i // columns, i % columns) for i in range(len(current_layout)) if current_layout[i] == color]\n",
+    "        color_positions_goal = [(i // columns, i % columns) for i in range(len(goal_layout)) if goal_layout[i] == color]\n",
+    "\n",
+    "        for curr_row, curr_col in color_positions_current:\n",
+    "            min_distance = float('inf')\n",
+    "            for goal_row, goal_col in color_positions_goal:\n",
+    "                distance = min(\n",
+    "                    abs(curr_row - goal_row),\n",
+    "                    abs(rows - abs(curr_row - goal_row)),\n",
+    "                    abs(curr_col - goal_col),\n",
+    "                    abs(columns - abs(curr_col - goal_col))\n",
+    "                )\n",
+    "                min_distance = min(min_distance, distance)\n",
+    "            h_n += min_distance\n",
     "\n",
     "    return h_n"
    ]
