--- a/WK1-6/CS2109S/PS/ps2/ps2.ipynb
+++ b/WK1-6/CS2109S/PS/ps2/ps2.ipynb
@@ -372,27 +372,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def astar_search(problem: cube.Cube):\n",
-    "    r\"\"\"\n",
-    "    A* Search finds the solution to reach the goal from the initial.\n",
-    "    If no solution is found, return False.\n",
-    "    \n",
+    "from utils import PriorityQueue\n",
+    "from utils import Node\n",
+    "\n",
+    "def heuristic_func(problem: cube.Cube, state: cube.State) -> float:\n",
+    "    \"\"\"\n",
+    "    Computes the admissible heuristic value of a state\n",
+    "\n",
     "    Args:\n",
-    "        problem (cube.Cube): Cube instance\n",
+    "        problem (cube.Cube): the problem to compute\n",
+    "        state (cube.State): the state to be evaluated\n",
     "\n",
     "    Returns:\n",
-    "        solution (List[Action]): the action sequence\n",
+    "        h_n (float): the heuristic value\n",
     "    \"\"\"\n",
-    "    fail = True\n",
-    "    solution = []\n",
-    "    \n",
-    "    \"\"\" YOUR CODE HERE \"\"\"\n",
-    " \n",
-    "    \"\"\" END YOUR CODE HERE \"\"\"\n",
-    "    \n",
-    "    if fail:\n",
-    "        return False\n",
-    "    return solution"
+    "    h_n = 0.0\n",
+    "    current_layout = state.layout\n",
+    "    goal_layout = problem.goal.layout\n",
+    "    rows, columns = problem.initial.shape\n",
+    "\n",
+    "    for color in ['R', 'G', 'B']:\n",
+    "        color_positions_current = [(i // columns, i % columns) for i in range(len(current_layout)) if current_layout[i] == color]\n",
+    "        color_positions_goal = [(i // columns, i % columns) for i in range(len(goal_layout)) if goal_layout[i] == color]\n",
+    "\n",
+    "        for curr_row, curr_col in color_positions_current:\n",
+    "            min_distance = float('inf')\n",
+    "            for goal_row, goal_col in color_positions_goal:\n",
+    "                distance = min(\n",
+    "                    abs(curr_row - goal_row),\n",
+    "                    abs(rows - abs(curr_row - goal_row)),\n",
+    "                    abs(curr_col - goal_col),\n",
+    "                    abs(columns - abs(curr_col - goal_col))\n",
+    "                )\n",
+    "                min_distance = min(min_distance, distance)\n",
+    "            h_n += min_distance\n",
+    "\n",
+    "    return h_n\n",
+    "\n",
+    "def astar_search(problem):\n",
+    "    def heuristic(state):\n",
+    "        return heuristic_func(problem, state)\n",
+    "\n",
+    "    # Initialize the start node and open list (priority queue)\n",
+    "    start_node = Node(parent=None, act=None, state=problem.initial, g_n=0.0, h_n=heuristic(problem.initial))\n",
+    "    open_list = PriorityQueue()\n",
+    "\n",
+    "    # Push the start node into the priority queue with its priority \n",
+    "    heapq.heappush(open_list.heap, (start_node.get_fn(), start_node))\n",
+    "\n",
+    "    # Initialize the closed list\n",
+    "    closed_list = set()\n",
+    "\n",
+    "    while open_list:  # Continue while there are nodes in the open list\n",
+    "        _, current_node = heapq.heappop(open_list.heap)  # Get the node with the lowest\n",
+    "        current_state = current_node.state\n",
+    "\n",
+    "        if problem.goal_test(current_state):\n",
+    "            # Found the goal state, reconstruct the path\n",
+    "            path = []\n",
+    "            while current_node.parent:\n",
+    "                path.append(current_node.act)\n",
+    "                current_node = current_node.parent\n",
+    "            path.reverse()\n",
+    "            return path\n",
+    "\n",
+    "        closed_list.add(current_state)  # Mark the current state as explored\n",
+    "\n",
+    "        for action in problem.actions(current_state):\n",
+    "            child_state = problem.result(current_state, action)\n",
+    "            g_n_child = current_node.g_n + 1  # Assuming a cost of 1 per action\n",
+    "            h_n_child = heuristic(child_state)\n",
+    "            child_node = Node(parent=current_node, act=action, state=child_state, g_n=g_n_child, h_n=h_n_child)\n",
+    "\n",
+    "            if child_state not in closed_list:\n",
+    "                heapq.heappush(open_list.heap, (child_node.get_fn(), child_node))\n",
+    "\n",
+    "    return []"
    ]
   },
   {
@@ -527,6 +582,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import List\n",
+    "\n",
     "def transition(route: List[int]):\n",
     "    r\"\"\"\n",
     "    Generates new routes to be used in the next iteration in the hill-climbing algorithm.\n",
@@ -539,11 +596,16 @@
     "    \"\"\"\n",
     "    new_routes = []\n",
     "    \n",
-    "    \"\"\" YOUR CODE HERE \"\"\"\n",
+    "    # Iterate over all pairs of cities to generate new routes\n",
+    "    n = len(route)\n",
+    "    for i in range(n):\n",
+    "        for j in range(i + 1, n):\n",
+    "            # Swap the positions of cities at indices i and j\n",
+    "            new_route = route[:]\n",
+    "            new_route[i], new_route[j] = new_route[j], new_route[i]\n",
+    "            new_routes.append(new_route)\n",
     "    \n",
-    "    \"\"\" END YOUR CODE HERE \"\"\"\n",
-    "\n",
-    "    return new_routes"
+    "    return new_routes\n"
    ]
   },
   {
@@ -597,10 +659,28 @@
     "        h_n (float): the evaluation score\n",
     "    \"\"\"\n",
     "    h_n = 0.0\n",
-    "    \n",
-    "    \"\"\" YOUR CODE HERE \"\"\"\n",
-    "    \n",
-    "    \"\"\" END YOUR CODE HERE \"\"\"\n",
+    "\n",
+    "    # Calculate the total distance traveled in the route\n",
+    "    total_distance = 0.0\n",
+    "    for i in range(cities - 1):\n",
+    "        c1 = route[i]\n",
+    "        c2 = route[i + 1]\n",
+    "\n",
+    "        # Find the distance between cities c1 and c2 in the distances list\n",
+    "        for (city1, city2, distance) in distances:\n",
+    "            if (city1 == c1 and city2 == c2) or (city1 == c2 and city2 == c1):\n",
+    "                total_distance += distance\n",
+    "                break\n",
+    "\n",
+    "    # Add the distance from the last city back to the starting city\n",
+    "    c1 = route[-1]\n",
+    "    c2 = route[0]\n",
+    "    for (city1, city2, distance) in distances:\n",
+    "        if (city1 == c1 and city2 == c2) or (city1 == c2 and city2 == c1):\n",
+    "            total_distance += distance\n",
+    "            break\n",
+    "\n",
+    "    h_n = -total_distance  # Negative of total distance\n",
     "\n",
     "    return h_n"
    ]
@@ -657,29 +737,35 @@
    "outputs": [],
    "source": [
     "def hill_climbing(cities: int, distances: List[Tuple[int]]):\n",
-    "    r\"\"\"\n",
-    "    Hill climbing finds the solution to reach the goal from the initial.\n",
+    "    \n",
+    "    # Initialize the current route with a random permutation of cities\n",
+    "    current_route = random.sample(range(cities), cities)\n",
+    "    \n",
+    "    # Evaluate the initial route\n",
+    "    current_score = evaluation_func(cities, distances, current_route)\n",
+    "    \n",
+    "    # Flag to indicate whether we should continue searching\n",
+    "    improving = True\n",
+    "    \n",
+    "    while improving:\n",
+    "        improving = False\n",
+    "        \n",
+    "        # Generate neighboring routes by applying local changes (e.g., swaps)\n",
+    "        neighboring_routes = transition(current_route)\n",
+    "        \n",
+    "        for neighbor in neighboring_routes:\n",
+    "            # Evaluate the neighbor route\n",
+    "            neighbor_score = evaluation_func(cities, distances, neighbor)\n",
+    "            \n",
+    "            # If the neighbor route is better, move to it\n",
+    "            if neighbor_score < current_score:\n",
+    "                current_route = neighbor\n",
+    "                current_score = neighbor_score\n",
+    "                improving = True  # Continue searching\n",
+    "                \n",
+    "    return current_route\n",
     "\n",
-    "    Args:\n",
-    "        cities (int): The number of cities to be visited\n",
-    "\n",
-    "        distances (List[Tuple[int]]): The list of distances between every two cities\n",
-    "            Each distance is represented as a tuple in the form of (c1, c2, d), where\n",
-    "                c1 and c2 are the two cities and d is the distance between them.\n",
-    "            The length of the list should be equal to cities * (cities - 1)/2.\n",
-    "\n",
-    "    Returns:\n",
-    "        route (List[int]): The shortest route, represented by a list of cities\n",
-    "            in the order to be traversed.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    route = []\n",
-    "\n",
-    "    \"\"\" YOUR CODE HERE \"\"\"\n",
-    "\n",
-    "    \"\"\" END YOUR CODE HERE \"\"\"\n",
-    "\n",
-    "    return route"
+    "\n"
    ]
   },
   {
