--- a/WK1-6/CS2109S/PS/ps2/ps2.ipynb
+++ b/WK1-6/CS2109S/PS/ps2/ps2.ipynb
@@ -822,9 +822,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def hill_climbing_with_random_restarts(cities: int, distances: List[Tuple[int]], repeats: int = 10):\n",
+    "def evaluation_func(cities: int, distances: List[Tuple[int]], route: List[int]) -> float:\n",
     "    r\"\"\"\n",
-    "    Hill climbing with random restarts finds the solution to reach the goal from the initial.\n",
+    "    Computes the evaluation score of a route\n",
     "\n",
     "    Args:\n",
     "        cities (int): The number of cities to be visited\n",
@@ -834,21 +834,75 @@
     "                c1 and c2 are the two cities and d is the distance between them.\n",
     "            The length of the list should be equal to cities * (cities - 1)/2.\n",
     "\n",
-    "        repeats (int): The number of times hill climbing to be repeated. The default\n",
-    "            value is 10.\n",
+    "        route (List[int]): The current route as a list of cities in the order of travel\n",
     "\n",
     "    Returns:\n",
-    "        route (List[int]): The shortest route, represented by a list of cities\n",
-    "            in the order to be traversed.\n",
+    "        h_n (float): the evaluation score\n",
     "    \"\"\"\n",
+    "    h_n = 0.0\n",
     "\n",
-    "    route = []\n",
+    "    for i in range(cities - 1):\n",
+    "        c1 = route[i]\n",
+    "        c2 = route[i + 1]\n",
     "\n",
-    "    \"\"\" YOUR CODE HERE \"\"\"\n",
+    "        # Find the distance between c1 and c2 in the distances list\n",
+    "        for (x, y, d) in distances:\n",
+    "            if (x == c1 and y == c2) or (x == c2 and y == c1):\n",
+    "                h_n += d\n",
+    "                break\n",
     "\n",
-    "    \"\"\" END YOUR CODE HERE \"\"\"\n",
+    "    return h_n\n",
     "\n",
-    "    return route"
+    "def hill_climbing(cities: int, distances: List[Tuple[int]]):\n",
+    "    \n",
+    "    # Initialize the current route with a random permutation of cities\n",
+    "    current_route = random.sample(range(cities), cities)\n",
+    "    \n",
+    "    # Evaluate the initial route\n",
+    "    current_score = evaluation_func(cities, distances, current_route)\n",
+    "    \n",
+    "    # Flag to indicate whether we should continue searching\n",
+    "    improving = True\n",
+    "    \n",
+    "    while improving:\n",
+    "        improving = False\n",
+    "        \n",
+    "        # Generate neighboring routes by applying local changes (e.g., swaps)\n",
+    "        neighboring_routes = transition(current_route)\n",
+    "        \n",
+    "        for neighbor in neighboring_routes:\n",
+    "            # Evaluate the neighbor route\n",
+    "            neighbor_score = evaluation_func(cities, distances, neighbor)\n",
+    "            \n",
+    "            # If the neighbor route is better, move to it\n",
+    "            if neighbor_score < current_score:\n",
+    "                current_route = neighbor\n",
+    "                current_score = neighbor_score\n",
+    "                improving = True  # Continue searching\n",
+    "                \n",
+    "    return current_route\n",
+    "\n",
+    "def hill_climbing_with_random_restarts(cities: int, distances: List[Tuple[int]], repeats: int = 10):\n",
+    "    best_route = None\n",
+    "    best_score = float('inf')\n",
+    "\n",
+    "    for _ in range(repeats):\n",
+    "        # Generate a random initial route (permutation of cities)\n",
+    "        initial_route = list(range(cities))\n",
+    "        random.shuffle(initial_route)\n",
+    "\n",
+    "        # Perform hill climbing from the random initial route\n",
+    "        current_route = hill_climbing(cities, distances)\n",
+    "\n",
+    "        # Compute the evaluation score (total distance) of the resulting route\n",
+    "        current_score = evaluation_func(cities, distances, current_route)\n",
+    "\n",
+    "        # Update the best route if the current route is better\n",
+    "        if current_score < best_score:\n",
+    "            best_route = current_route\n",
+    "            best_score = current_score\n",
+    "\n",
+    "    return best_route\n"
    ]
   },
   {
@@ -885,13 +939,22 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Task 2.8: Comparison between local search and other search algorithms\n",
     "\n",
     "Compared to previous search algorithms you have seen (uninformed search, A*), why do you think local search is more suitable for this problem?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The problem of finding the shortest route to visit a set of cities exactly once and return to the starting city is inherently combinatorial and belongs to the class of NP-hard problems. Exact algorithms like brute force or dynamic programming become computationally infeasible as the number of cities increases. Local search algorithms provide a heuristic approach to finding good solutions in a reasonable amount of time.\n",
+    "For the TSP, finding a global optimum is often impractical, so local search methods provide a pragmatic approach.\n",
+    "Local search algorithms do not require knowledge of the global optimum or the entire solution space. They are guided by the local search heuristic and aim to reach a \"good enough\" solution. For the TSP, finding a global optimum is often impractical, so local search methods provide a pragmatic approach."
    ]
   },
   {
