--- a/WK1-6/CS2109S/PS/ps5/ps5.ipynb
+++ b/WK1-6/CS2109S/PS/ps5/ps5.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -961,13 +961,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'matplotlib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/Users/eunice/Y2S1-1/WK1-6/CS2109S/PS/ps5/ps5.ipynb Cell 66\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/eunice/Y2S1-1/WK1-6/CS2109S/PS/ps5/ps5.ipynb#Y122sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eunice/Y2S1-1/WK1-6/CS2109S/PS/ps5/ps5.ipynb#Y122sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtime\u001b[39;00m \u001b[39mimport\u001b[39;00m time\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eunice/Y2S1-1/WK1-6/CS2109S/PS/ps5/ps5.ipynb#Y122sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "from time import time\n",
+    "import numpy as np\n",
     "\n",
+    "X_sample = np.random.rand(100, 2)  # Initialize X_sample with random data (100 samples, 2 features)\n",
+    "y_sample = np.random.randint(0, 2, size=100)  # Initialize y_sample with random binary labels (0 or 1)\n",
     "# Initialize your X_sample and y_sample\n",
     "# Define the number of iterations\n",
     "num_iterations = 250\n",
