--- a/WK1-6/CS2109S/PS/ps6/ps6.ipynb
+++ b/WK1-6/CS2109S/PS/ps6/ps6.ipynb
@@ -1106,18 +1106,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 15,
    "id": "81145ccc",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "# Define a simple neural network\n",
     "class MyFirstNeuralNet(nn.Module):\n",
-    "    def __init__(self): # set the arguments you'd need\n",
-    "        super().__init__()\n",
-    "        self.l1 = nn.Linear(1, 2) # bias included by default\n",
-    "        self.l2 = nn.Linear(2, 1) # bias included by default\n",
-    "        self.relu = nn.ReLU()\n",
-    " \n",
+    "    def __init__(self):\n",
+    "        super(MyFirstNeuralNet, self).__init__()\n",
+    "        # Define your layers here\n",
+    "        self.fc1 = nn.Linear(input_size, hidden_size)\n",
+    "        self.fc2 = nn.Linear(hidden_size, output_size)\n",
+    "\n",
     "    # Task 3.1: Forward pass\n",
     "    def forward(self, x):\n",
     "        '''\n",
@@ -1131,26 +1135,28 @@
     "        -------\n",
     "            Tensor of shape (n, 1)\n",
     "        '''\n",
-    "        raise NotImplementedError\n",
-    "        \n"
+    "        x = self.l1(x)        # Pass input through the first linear layer\n",
+    "        x = self.relu(x)      # Apply ReLU activation\n",
+    "        x = self.l2(x)        # Pass through the second linear layer\n",
+    "        return x              # Return the output\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 17,
    "id": "1040ee57",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NotImplementedError",
-     "evalue": "",
+     "ename": "NameError",
+     "evalue": "name 'input_size' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb Cell 35\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X46sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m state_dict \u001b[39m=\u001b[39m OrderedDict([\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X46sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     (\u001b[39m'\u001b[39m\u001b[39ml1.weight\u001b[39m\u001b[39m'\u001b[39m, torch\u001b[39m.\u001b[39mtensor([[\u001b[39m1.\u001b[39m],[\u001b[39m-\u001b[39m\u001b[39m1.\u001b[39m]])),\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X46sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     (\u001b[39m'\u001b[39m\u001b[39ml1.bias\u001b[39m\u001b[39m'\u001b[39m,   torch\u001b[39m.\u001b[39mtensor([\u001b[39m-\u001b[39m\u001b[39m1.\u001b[39m, \u001b[39m1.\u001b[39m])),\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X46sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     (\u001b[39m'\u001b[39m\u001b[39ml2.weight\u001b[39m\u001b[39m'\u001b[39m, torch\u001b[39m.\u001b[39mtensor([[\u001b[39m1.\u001b[39m, \u001b[39m1.\u001b[39m]])),\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X46sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     (\u001b[39m'\u001b[39m\u001b[39ml2.bias\u001b[39m\u001b[39m'\u001b[39m,   torch\u001b[39m.\u001b[39mtensor([\u001b[39m0.\u001b[39m]))\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X46sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m ])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X46sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m model\u001b[39m.\u001b[39mload_state_dict(state_dict)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X46sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m student1 \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39;49mforward(x_sample)\u001b[39m.\u001b[39mdetach()\u001b[39m.\u001b[39mnumpy()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X46sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m output1 \u001b[39m=\u001b[39m [[\u001b[39m3.\u001b[39m], [\u001b[39m2.\u001b[39m], [\u001b[39m1.\u001b[39m], [\u001b[39m0.\u001b[39m], [\u001b[39m1.\u001b[39m]]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X46sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39massert\u001b[39;00m allclose(student1, output1, atol\u001b[39m=\u001b[39m\u001b[39m1e-5\u001b[39m)\n",
-      "\u001b[1;32m/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb Cell 35\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X46sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, x):\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X46sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m    \u001b[39m\u001b[39m'''\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X46sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m    Forward pass to process input through two linear layers and ReLU activation function.\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X46sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X46sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m \u001b[39m        Tensor of shape (n, 1)\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X46sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m \u001b[39m    '''\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X46sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mNotImplementedError\u001b[39;00m\n",
-      "\u001b[0;31mNotImplementedError\u001b[0m: "
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb Cell 35\u001b[0m line \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X46sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m x_sample \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mlinspace(\u001b[39m-\u001b[39m\u001b[39m2\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m5\u001b[39m)\u001b[39m.\u001b[39mreshape(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39m1\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X46sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m model \u001b[39m=\u001b[39m MyFirstNeuralNet()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X46sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m state_dict \u001b[39m=\u001b[39m OrderedDict([\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X46sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     (\u001b[39m'\u001b[39m\u001b[39ml1.weight\u001b[39m\u001b[39m'\u001b[39m, torch\u001b[39m.\u001b[39mtensor([[\u001b[39m1.\u001b[39m],[\u001b[39m-\u001b[39m\u001b[39m1.\u001b[39m]])),\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X46sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     (\u001b[39m'\u001b[39m\u001b[39ml1.bias\u001b[39m\u001b[39m'\u001b[39m,   torch\u001b[39m.\u001b[39mtensor([\u001b[39m-\u001b[39m\u001b[39m1.\u001b[39m, \u001b[39m1.\u001b[39m])),\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X46sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     (\u001b[39m'\u001b[39m\u001b[39ml2.weight\u001b[39m\u001b[39m'\u001b[39m, torch\u001b[39m.\u001b[39mtensor([[\u001b[39m1.\u001b[39m, \u001b[39m1.\u001b[39m]])),\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X46sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     (\u001b[39m'\u001b[39m\u001b[39ml2.bias\u001b[39m\u001b[39m'\u001b[39m,   torch\u001b[39m.\u001b[39mtensor([\u001b[39m0.\u001b[39m]))\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X46sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m ])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X46sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m model\u001b[39m.\u001b[39mload_state_dict(state_dict)\n",
+      "\u001b[1;32m/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb Cell 35\u001b[0m line \u001b[0;36m9\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X46sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39msuper\u001b[39m(MyFirstNeuralNet, \u001b[39mself\u001b[39m)\u001b[39m.\u001b[39m\u001b[39m__init__\u001b[39m()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X46sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m# Define your layers here\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X46sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfc1 \u001b[39m=\u001b[39m nn\u001b[39m.\u001b[39mLinear(input_size, hidden_size)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X46sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfc2 \u001b[39m=\u001b[39m nn\u001b[39m.\u001b[39mLinear(hidden_size, output_size)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'input_size' is not defined"
      ]
     }
    ],
@@ -1194,7 +1200,18 @@
    "execution_count": null,
    "id": "7c2a8f0e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value of x before it is updated by optimiser:  tensor([1.], requires_grad=True)\n",
+      "Gradient stored in x after backpropagation:  tensor([4.])\n",
+      "Value of x after it is updated by optimiser:  tensor([0.6000], requires_grad=True)\n",
+      "Gradient stored in x after zero_grad is called:  tensor([0.])\n"
+     ]
+    }
+   ],
    "source": [
     "x = torch.tensor([1.0], requires_grad=True)\n",
     "\n",
@@ -1244,7 +1261,20 @@
    "execution_count": null,
    "id": "587d9e4d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'input_size' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb Cell 39\u001b[0m line \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X53sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m torch\u001b[39m.\u001b[39mmanual_seed(\u001b[39m6\u001b[39m) \u001b[39m# Set seed to some fixed value\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X53sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m epochs \u001b[39m=\u001b[39m \u001b[39m10000\u001b[39m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X53sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m model \u001b[39m=\u001b[39m MyFirstNeuralNet()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X53sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39m# the optimizer controls the learning rate\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X53sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m optimiser \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39moptim\u001b[39m.\u001b[39mSGD(model\u001b[39m.\u001b[39mparameters(), lr\u001b[39m=\u001b[39m\u001b[39m1e-3\u001b[39m, momentum\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n",
+      "\u001b[1;32m/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb Cell 39\u001b[0m line \u001b[0;36m9\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X53sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39msuper\u001b[39m(MyFirstNeuralNet, \u001b[39mself\u001b[39m)\u001b[39m.\u001b[39m\u001b[39m__init__\u001b[39m()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X53sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m# Define your layers here\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X53sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfc1 \u001b[39m=\u001b[39m nn\u001b[39m.\u001b[39mLinear(input_size, hidden_size)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X53sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfc2 \u001b[39m=\u001b[39m nn\u001b[39m.\u001b[39mLinear(hidden_size, output_size)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'input_size' is not defined"
+     ]
+    }
+   ],
    "source": [
     "torch.manual_seed(6) # Set seed to some fixed value\n",
     "\n",
@@ -1324,11 +1354,30 @@
    "execution_count": null,
    "id": "481bb0cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Submit the OrderedDict below ---\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb Cell 42\u001b[0m line \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X56sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# To submit this output\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X56sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m--- Submit the OrderedDict below ---\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X56sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(model\u001b[39m.\u001b[39mstate_dict())\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X56sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m OrderedDict([(\u001b[39m'\u001b[39m\u001b[39ml1.weight\u001b[39m\u001b[39m'\u001b[39m, tensor([[\u001b[39m1.0344\u001b[39m],\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X56sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m         [\u001b[39m0.1120\u001b[39m]])), (\u001b[39m'\u001b[39m\u001b[39ml1.bias\u001b[39m\u001b[39m'\u001b[39m, tensor([\u001b[39m-\u001b[39m\u001b[39m0.4025\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m0.4025\u001b[39m])), (\u001b[39m'\u001b[39m\u001b[39ml2.weight\u001b[39m\u001b[39m'\u001b[39m, tensor([[\u001b[39m-\u001b[39m\u001b[39m0.9055\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m0.5672\u001b[39m]])), (\u001b[39m'\u001b[39m\u001b[39ml2.bias\u001b[39m\u001b[39m'\u001b[39m, tensor([\u001b[39m0.4061\u001b[39m]))])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# To submit this output\n",
     "print(\"--- Submit the OrderedDict below ---\")\n",
-    "print(model.state_dict())"
+    "print(model.state_dict())\n"
    ]
   },
   {
@@ -1336,7 +1385,19 @@
    "execution_count": null,
    "id": "d6e437cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb Cell 43\u001b[0m line \u001b[0;36m9\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X60sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     y_pred \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39mforward(x)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X60sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m loss_fn(y_pred, y)\u001b[39m.\u001b[39mitem()\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X60sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39massert\u001b[39;00m model\u001b[39m.\u001b[39mload_state_dict(state_dict)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eunice/Desktop/Y2S1-1/WK1-6/CS2109S/PS/ps6/ps6.ipynb#X60sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39massert\u001b[39;00m get_loss(model) \u001b[39m<\u001b[39m \u001b[39m1\u001b[39m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def get_loss(model):\n",
     "    model.load_state_dict(state_dict)\n",
